Fixed a grammatical error

--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
                             <h3>Dedicated Server Engineer</h3>
                             <h4>100TB</h4>
 
-                            <p>Logan Utah</p>
+                            <p>Logan, Utah</p>
                         </div>
                         <!-- .experience-item -->
                     </div>
